<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.houtu</groupId>
    <artifactId>houtu-dependencies</artifactId>
    <version>2.7.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <skipTests>true</skipTests>
        <spring-boot-starter-parent.version>2.7.18</spring-boot-starter-parent.version>
<!--        <javax.xml.bind-api.version>4.0.2</javax.xml.bind-api.version>-->
        <cache2k.version>2.6.1.Final</cache2k.version>
        <io.jsonwebtoken.version>0.12.7</io.jsonwebtoken.version>
        <redisson.version>3.51.0</redisson.version>
        <com.houtu.version>2.7.1-SNAPSHOT</com.houtu.version>
    </properties>

    <modules>
        <module>houtu-core</module>
        <module>houtu-utils</module>
        <module>houtu-cache</module>
        <module>houtu-access-log</module>
        <module>houtu-web</module>
        <module>houtu-web-security</module>
        <module>houtu-web-swagger</module>
        <module>houtu-monitor</module>
        <module>spring-cloud-houtu</module>
        <module>houtu-data-security</module>
    </modules>

    <dependencyManagement>
        <!-- 公共功能模块引入pom依赖 -->
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring-boot-starter-parent.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-utils</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-core</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-cache</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-monitor</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-access-log</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-data-security</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-web</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-web-security</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>
            <dependency>
                <groupId>com.houtu</groupId>
                <artifactId>houtu-web-swagger</artifactId>
                <version>${com.houtu.version}</version>
            </dependency>


            <!-- Redisson -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-data-27</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <!-- Cache2k -->
            <dependency>
                <groupId>org.cache2k</groupId>
                <artifactId>cache2k-api</artifactId>
                <version>${cache2k.version}</version>
            </dependency>
            <dependency>
                <groupId>org.cache2k</groupId>
                <artifactId>cache2k-spring</artifactId>
                <version>${cache2k.version}</version>
            </dependency>

            <!-- JWT 支持 (使用 jjwt 库) -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${io.jsonwebtoken.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${io.jsonwebtoken.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${io.jsonwebtoken.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <developers>
        <developer>
            <id>jon</id>
            <name>Jon Lu</name>
            <email>lujiafayx@163.com</email>
            <roles>
                <role>Project lead</role>
            </roles>
        </developer>
    </developers>

</project>
